--- a/modules/gateway/assertions/WhichModuleAssertion/src/main/java/com/l7tech/external/assertions/whichmodule/console/DemoGenericEntityDialog.form
+++ b/modules/gateway/assertions/WhichModuleAssertion/src/main/java/com/l7tech/external/assertions/whichmodule/console/DemoGenericEntityDialog.form
@@ -90,7 +90,7 @@
           </component>
           <component id="aa8dd" class="javax.swing.JTextField" binding="nameField" default-binding="true">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                 <preferred-size width="150" height="-1"/>
               </grid>
             </constraints>
@@ -109,6 +109,14 @@
               <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
             </constraints>
           </hspacer>
+          <component id="ba6bc" class="javax.swing.JCheckBox" binding="enabledCheckBox" default-binding="true">
+            <constraints>
+              <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text value="Enabled"/>
+            </properties>
+          </component>
         </children>
       </grid>
     </children>
