--- a/modules/gateway/assertions/MqNativeAssertion/src/main/java/com/l7tech/external/assertions/mqnative/console/MqNativePropertiesDialog.form
+++ b/modules/gateway/assertions/MqNativeAssertion/src/main/java/com/l7tech/external/assertions/mqnative/console/MqNativePropertiesDialog.form
@@ -145,7 +145,7 @@
                       <text value="Port number"/>
                     </properties>
                   </component>
-                  <component id="80684" class="javax.swing.JTextField" binding="portNumberTextBox">
+                  <component id="80684" class="javax.swing.JTextField" binding="portNumberTextField">
                     <constraints>
                       <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                         <preferred-size width="150" height="-1"/>
@@ -158,7 +158,7 @@
                       <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
                     </constraints>
                     <properties>
-                      <text value="Channel"/>
+                      <text value="Channel name"/>
                     </properties>
                   </component>
                   <component id="7e8f9" class="javax.swing.JTextField" binding="channelTextBox">
@@ -357,7 +357,10 @@
                   </grid>
                   <component id="b0d58" class="com.l7tech.console.panels.SecurePasswordComboBox" binding="securePasswordComboBox">
                     <constraints>
-                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                      <grid row="1" column="2" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false">
+                        <minimum-size width="100" height="-1"/>
+                        <preferred-size width="200" height="-1"/>
+                      </grid>
                     </constraints>
                   </component>
                   <component id="a68db" class="javax.swing.JButton" binding="managePasswordsButton" default-binding="true">
