--- a/modules/gateway/console/src/main/java/com/l7tech/console/panels/WsSecurityPropertiesDialog.form
+++ b/modules/gateway/console/src/main/java/com/l7tech/console/panels/WsSecurityPropertiesDialog.form
@@ -3,7 +3,7 @@
   <grid id="27dc6" binding="mainPanel" layout-manager="GridLayoutManager" row-count="5" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
     <margin top="0" left="0" bottom="0" right="0"/>
     <constraints>
-      <xy x="20" y="20" width="643" height="528"/>
+      <xy x="20" y="20" width="689" height="605"/>
     </constraints>
     <properties>
       <minimumSize width="-1" height="-1"/>
@@ -74,7 +74,7 @@
           </component>
         </children>
       </grid>
-      <grid id="d7079" binding="applySecuritySettingsPanel" layout-manager="GridLayoutManager" row-count="6" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+      <grid id="d7079" binding="applySecuritySettingsPanel" layout-manager="GridLayoutManager" row-count="7" column-count="3" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
         <margin top="0" left="0" bottom="0" right="0"/>
         <constraints>
           <grid row="3" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -126,7 +126,7 @@
           </component>
           <component id="63154" class="javax.swing.JComboBox" binding="wssVersionComboBox">
             <constraints>
-              <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
+              <grid row="0" column="1" row-span="1" col-span="2" vsize-policy="0" hsize-policy="2" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
             </constraints>
             <properties/>
           </component>
@@ -209,6 +209,22 @@
               </hspacer>
             </children>
           </grid>
+          <component id="3dd48" class="javax.swing.JRadioButton" binding="useCertificateFromVariableRadioButton" default-binding="true">
+            <constraints>
+              <grid row="6" column="0" row-span="1" col-span="2" vsize-policy="0" hsize-policy="3" anchor="8" fill="0" indent="1" use-parent-layout="false"/>
+            </constraints>
+            <properties>
+              <text resource-bundle="com/l7tech/console/panels/WsSecurityPropertiesDialog" key="variableRecipient.label"/>
+            </properties>
+          </component>
+          <component id="78600" class="javax.swing.JTextField" binding="certificateTextField">
+            <constraints>
+              <grid row="6" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
+                <preferred-size width="150" height="-1"/>
+              </grid>
+            </constraints>
+            <properties/>
+          </component>
         </children>
       </grid>
       <component id="63709" class="javax.swing.JCheckBox" binding="applyWsSecurityCheckBox">
@@ -238,6 +254,7 @@
       <member id="f620d"/>
       <member id="4a3dc"/>
       <member id="e2c37"/>
+      <member id="3dd48"/>
     </group>
   </buttonGroups>
 </form>
