--- a/modules/gateway/assertions/SamlpAssertion/src/main/java/com/l7tech/external/assertions/samlpassertion/console/resources/SamlpResponseBuilderPropertiesDialog.form
+++ b/modules/gateway/assertions/SamlpAssertion/src/main/java/com/l7tech/external/assertions/samlpassertion/console/resources/SamlpResponseBuilderPropertiesDialog.form
@@ -132,7 +132,9 @@
                     <preferred-size width="320" height="-1"/>
                   </grid>
                 </constraints>
-                <properties/>
+                <properties>
+                  <editable value="true"/>
+                </properties>
               </component>
               <component id="108cf" class="javax.swing.JLabel">
                 <constraints>
